tests/macros/checkbox/default.rs
fn main() {
    discourse::questions![Checkbox { default: todo!() }];
}
